# notes

./: .gitignore
RaspberryPi/: 1树莓派上手初体验.md
books/1我最想要的记忆魔法书/: 1我最想要的记忆魔法书-poker.md
embeded/U-Boot/: 1u-boot-2016.09make配置过程分析.md  2u-boot-2016.09make工具之fixdep.md
git/: 1git基本配置.md  1我的git配置.md  2git学习笔记——基本用法.md  git学习笔记——基本用法.org
huawei_test/: a.out  test1.c  test2.c
leetcode/1486_数组异或操作/: main.c
leetcode/386_字典序排数/: a.out  main.c
leetcode/88_合并两个有序数组/: a.out  main.c
leetcode/array/495_Teemo_Attacking/: a.out  leetcode.c  main.c
leetcode/array/532_K-diff_Pairs_in_an_Array/: 532_K-diff_Pairs_in_an_Array.c  a.out  main.c
leetcode/dynamic_programming/1143_最长公共子序列/: a.out  main.c
linux/: 使用xmodmap修改按键行为.org
linux/iptables/: 1iptables详解(1):iptables概念.md
linux/keymap/: 2使用xkb修改按键映射.md  使用xmodmap修改按键行为.org
linux/shell/: 1shell基础.md  shell基础.org  基础正则表达式.md  基础正则表达式.org
linux/shortcut/: 命令行快捷键.org
linux/z杂记/: 2Ubuntu简单配置.md  linux杂记.md
nowcoder/HJ1_字符串最后一个单词的长度/: a.out  main.c
nowcoder/HJ25_数据分类处理/: a.out  main.c
others/: 1Firefox不能播放斗鱼直播的问题.md
programme/: gdb.org  编程规范.org
programme/cmake/: 1CMake学习笔记——基础篇.md  2CMake学习笔记——深入篇.md  cmake学习笔记1.md  cmake学习笔记1.org  tmp
programme/cmake/cmake/src/lib/: CMakeLists.txt
programme/cmake/code/1基础篇/: CMakeLists.txt
programme/cmake/code/1基础篇/src/lib/: hello.c
programme/gdb/: 1嵌入式gdb调试环境.md
server/: 1Samba服务器搭建.md
vim/: vim_install.md  vim优化计划.org
vim/airline/: airline安装与配置.org
vim/markdown/: markdown基础语法.md  markdown插件.md
vim/orgmode/: orgmode学习笔记.org
vpn/: 1Ubuntu搭建OpenVpn.md
(+16 files in other folders)
